force-app/main/default/objects/Order_Line_Detail__c/Order_Line_Detail__c.object-meta.xml
<CustomObject>
    <description>Hiển thị số lần sử dụng của mỗi session. (Dùng trigger tạo automation)</description>
    <label>Order Line Detail</label>
    <nameField>
        <displayFormat>OLD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>