force-app/main/default/objects/Order_Line_Detail__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Line Details</relationshipLabel>
    <relationshipName>Order_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>