force-app/main/default/objects/Order_Line_Detail__c/fields/Package_Owner__c.field-meta.xml
<CustomField>
    <fullName>Package_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Owner</label>
    <referenceTo>Package_Owner__c</referenceTo>
    <relationshipLabel>Order Line Details</relationshipLabel>
    <relationshipName>Order_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>