force-app/main/default/objects/Order_Line_Detail__c/fields/Product_Detail_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nếu Lookup đến Product Service Package thì sẽ không thấy Product session, vì vậy phải lookup đến Product Detail Service(Dùng trigger để auto create)</description>
    <label>Product Detail Service</label>
    <referenceTo>Product_Detail_Service__c</referenceTo>
    <relationshipLabel>Order Line Details</relationshipLabel>
    <relationshipName>Order_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>