force-app/main/default/objects/Order_Line_Detail__c/fields/Quantity_on_Product__c.field-meta.xml
<CustomField>
    <fullName>Quantity_on_Product__c</fullName>
    <formula>Product_Detail_Service__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity on Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>