force-app/main/default/objects/Order_Line_Detail__c/fields/Remain__c.field-meta.xml
<CustomField>
    <fullName>Remain__c</fullName>
    <label>Remain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>